fidesz-sapka: fix fullscreen button clipped by overflow:hidden on video items (#6)

--- a/fidesz-sapka-site/src/styles/global.css
+++ b/fidesz-sapka-site/src/styles/global.css
@@ -586,6 +586,10 @@ button {
   padding: 0;
 }
 
+.drive-grid__item--video.is-playing {
+  overflow: visible;
+}
+
 .drive-grid__item--video.is-playing .drive-grid__video-thumb {
   display: none;
 }
